# otocs

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
docs/: fujii_arxiv.ipynb  pyqsp_started.ipynb  quantum_circuit.ipynb
src/: __init__.py  style.py
src/circuit/: __init__.py  otoc_spectroscopy.py
src/fujii_arxiv/: __init__.py
src/model/: __init__.py  model.py
src/otocs/: __init__.py
src/otocs/circuit/: __init__.py  otoc_spectroscopy.py
src/otocs/fujii_arxiv/: truncated_propagator.py
src/otocs/model/: __init__.py  model.py  model_topology.py
src/otocs/qsp/: __init__.py  phiset.py
src/otocs/utility/: __init__.py  arr_to_observable.py
src/otocs/utility/vizualization/: __init__.py  plot.py
